welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: identifier expected but long literal found.
def 2l(y:Int,cpt:Int){
    ^