welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
  var cpt:Int=0
  for(a<-0 to 2){
    cpt=2l(y,cpt)
  }
  for (x<-0 to getMondeHauteur()-1){
    setPos(x,getMondeHauteur()-1)
    ecritMessage(""+cpt2)
    cpt2=cpt2+1
  }
  
}


def 2l(y:Int,cpt:Int){
  var cpt2:Int=cpt
  for (x<-0 to getMondeHauteur()-1){
    setPos(x,y)
    ecritMessage(""+cpt2)
    cpt2=cpt2+1
  }
  for (x>-getMondeLargeur() to 0){
    setPos(x,y+1)
    ecritMessage(""+cpt2)
    cpt2=cpt2+1
  }
}